# paladin

./: .gitignore  README.md  biome.json  docker-compose.server.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.cursor/rules/: gsd-workflow.md
.github/workflows/: packaging-linux.yml  packaging-macos.yml  packaging-windows.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: ag-ui-approval-card-missing.md  ai-provider-readiness-stale.md  go-service-readiness-after-save.md
.planning/debug/resolved/: titlebar-drag-broken.md
.planning/notes/: sidebar-cohesion-decision.md  sidebar-resizable-persistence-decision.md  sidecar-runtime-mode.md  ui-layout-architecture-decision.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
.planning/ui-reviews/: .gitignore
apps/agent/: .env.example  .gitignore  README.md  main.py  paladin-agent-sidecar.spec  pyproject.toml
apps/agent/config/: config.json  models.yaml
apps/agent/prompts/: system.md
apps/agent/skills/review/: code-review.md
apps/agent/src/agent/: agui_approval_bridge.py  approval_store.py  computer_use.py  hitl.py  paladin_agent.py  provider_runtime.py
apps/agent/src/server/: cli.py  main.py  provider_routes.py
apps/agent/tests/: test_agent.py  test_agui_approval_bridge.py  test_agui_dependency_probe.py  test_approval_store.py  test_cli.py  test_computer_use.py  test_hitl.py  test_prohibitions.py  test_provider_runtime.py  test_server.py  test_tools.py
apps/agent/tests/fixtures/: skill-escape.md
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  processes.json  processes.packaged.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: file_commands.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/ai_provider/: bootstrap.rs  bootstrap_tests.rs  commands_tests.rs  mod.rs  storage.rs  storage_tests.rs  types.rs
apps/desktop/src-tauri/src/go_config/: bootstrap.rs  bootstrap_tests.rs  commands.rs  commands_tests.rs  mod.rs  storage.rs  storage_tests.rs  types.rs
apps/desktop/src-tauri/src/process/: commands.rs  config.rs  config_tests.rs  log_redact.rs  log_redact_tests.rs  log_rotate.rs  log_rotate_tests.rs  mod.rs  port_probe.rs  port_probe_tests.rs  state_machine.rs  state_machine_tests.rs  supervisor.rs  supervisor_tests.rs
apps/desktop/src-tauri/src/terminal/: commands.rs  mod.rs
apps/server/: .env.example  .gitignore  README.md  go.mod  go.sum  sqlc.yaml
docs/: packaging.md  supervisor-startup-chain.md
docs/diagrams/: permission-approval-current-design.excalidraw
scripts/: launch-paladin-macos.sh  test-launch-paladin-macos.sh  verify-direct-launch-platforms.sh
(+436 files in other folders)
