[project]
name = "paladin-agent"
version = "0.1.0"
description = "Paladin AI Agent — Pydantic AI + AG-UI endpoint"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "pydantic-ai-slim[ag-ui]>=1.107.0",
    "pydantic-deep>=0.3.29",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
paladin-agent = "src.server.cli:main"
paladin-agent-serve = "src.server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
