[package]
name = "paladin"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "paladin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = [
  "tray-icon",
  "wry",
  "common-controls-v6",
  "dynamic-acl",
  "x11",
  "dbus",
] }
tauri-plugin-opener = "2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "io-util", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
regex = "1"

[dev-dependencies]
tempfile = "3"

